--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ width: is-12
 
       </div>
       <div class="tile is-parent">
-        <a href="api" class="tile is-child notification is-warning">
-          <p class="title">Autre section</p>
-          <p class="subtitle">Exemple</p>
+        <a href="/previsecours-slides" class="tile is-child notification is-warning">
+          <p class="title">Résultats</p>
+          <p class="subtitle">à ce jour</p>
         </a>
       </div>
     </div>
