--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ width: is-12
       </div>
       <div class="tile is-parent">
         <a href="/previsecours-slides" class="tile is-child notification is-warning">
-          <p class="title">Résultats</p>
-          <p class="subtitle">à ce jour</p>
+          <p class="title">Les résultats</p>
+          <p class="subtitle">avancement du projet</p>
         </a>
       </div>
     </div>
