--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 description: |
-  aider les sapeurs-pompiers à intervenir plus efficacement avec des modèles prédictifs.
-title: previsecours
+  Aider les sapeurs-pompiers à intervenir plus efficacement avec des modèles prédictifs
+title: Previsecours
 width: is-12
 ---
 <section class="section">
@@ -11,8 +11,10 @@ width: is-12
       <div class="tile">
         <div class="tile is-parent">
           <a href="philosophy" class="tile is-child notification is-light">
-            <p class="title">Previsecours</p>
-            <p class="subtitle">Ministère de l'Intérieur, Mission de coordination et d'appui à la valorisation des données</p>
+            <p class="title">Les acteurs</p>
+            <p class="content">Etalab</p>
+            <p class="content">Ministère de l'Intérieur</p>
+            <p class="content">Sdis 91</p>
             <figure class="image alpha-png-background">
               <img src="/assets/images/previsecours.svg">
             </figure>
@@ -30,8 +32,19 @@ width: is-12
       </div>
       <div class="tile is-parent">
         <a href="/previsecours-slides" class="tile is-child notification is-warning">
-          <p class="title">Les résultats</p>
-          <p class="subtitle">avancement du projet</p>
+          <p class="title">Méthode et Résultats</p>
+          <p class="subtitle">Méthode</p>
+          <p class="contact">
+            1. Discussion avec les sapeurs-pompiers, puis recupération d'un maximum de donnée qui pourraient etre en lien avec les interventions des pompiers. 
+          </p>
+          <p class="contact">
+            2. Etablissement des corrélations entre interventions et facteurs externes, puis création des prédictions et de l'interface de visualisation
+          </p>
+          <p class="subtitle">Résultats</p>
+          <p class="contact">
+            Les facteurs les plus corrélés avec les interventions des pompiers, autre que l'historique des interventions sont de facon simplifies (plus de 190 facteurs rentrent en compte):
+            allergies, météo, pollution et IDH2. 
+          </p>
         </a>
       </div>
     </div>
@@ -40,7 +53,7 @@ width: is-12
         <div class="content">
           <p class="title">Le défi</p>
           <p class="subtitle">
-              mettre au point un modèle prédictif des interventions de secours aux personnes
+              Mettre au point un modèle prédictif des interventions
           </p>
           <p class="content">
               Un modèle prédictif du volume d’interventions et de leur géolocalisation peut permettre d’anticiper les moyens opérationnels à mobiliser au sein des différentes casernes. Une meilleure gestion prévisionnelle des moyens est de nature à répondre aux demandes d’intervention plus rapidement en mobilisant un maximum de moyens uniquement lorsque cela est utile.
