--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ width: is-12
     <div class="tile is-vertical is-8">
       <div class="tile">
         <div class="tile is-parent">
-          <a href="philosophy" class="tile is-child notification is-light">
+          <a href="about" class="tile is-child notification is-light">
             <p class="title">Les acteurs</p>
             <p class="content">Etalab</p>
             <p class="content">Ministère de l'Intérieur</p>
@@ -49,7 +49,7 @@ width: is-12
       </div>
     </div>
     <div class="tile is-parent">
-      <a href="tutorial" class="tile is-child notification is-info">
+      <a href="/previsecours-slides" class="tile is-child notification is-info">
         <div class="content">
           <p class="title">Le défi</p>
           <p class="subtitle">
