--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ width: is-12
             <p class="content">Ministère de l'Intérieur</p>
             <p class="content">Sdis 91</p>
             <figure class="image alpha-png-background">
-              <img src="/assets/images/previsecours.svg">
+              <img src="/assets/images/eig.png" style="width:10em">
             </figure>
           </a>
         </div>
