--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@ width: is-12
         <div class="tile is-parent">
           <a href="about" class="tile is-child notification is-light">
             <p class="title">Les acteurs</p>
-            <p class="content">Etalab</p>
-            <p class="content">Ministère de l'Intérieur</p>
-            <p class="content">Sdis 91</p>
             <figure class="image alpha-png-background">
-              <img src="/assets/images/eig.png" style="width:10em">
+              <img src="/assets/images/eig.png" style="width:10em" alt="EIG">
             </figure>
+            <figure class="image alpha-png-background">
+              <img src="/assets/images/etalab.svg" style="width:10em" alt="etalab">
+            </figure>
+            <figure class="image alpha-png-background">
+              <img src="/assets/images/mi.svg" style="width:10em" alt="Ministère de l'Intérieur">
+            </figure>
+            <figure class="image alpha-png-background">
+              <img src="/assets/images/sdis91.jpg" style="width:10em" alt="SDIS 91">
+            </figure>
+
+          
           </a>
         </div>
         <div class="tile is-parent is-vertical">
