--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@ width: is-12
               <img src="/assets/images/eig.png" style="width:10em" alt="EIG">
             </figure>
             <figure class="image alpha-png-background">
-              <img src="/assets/images/etalab.svg" style="width:10em" alt="etalab">
+              <img src="/assets/images/mi.svg" style="width:10em" alt="Ministère de l'Intérieur & Etelab">
             </figure>
             <figure class="image alpha-png-background">
-              <img src="/assets/images/mi.svg" style="width:10em" alt="Ministère de l'Intérieur">
-            </figure>
-            <figure class="image alpha-png-background">
-              <img src="/assets/images/sdis91.jpg" style="width:10em" alt="SDIS 91">
+              <img src="/assets/images/sdis91.jpg" style="width:6em" alt="SDIS 91">
             </figure>
 
           
