--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 description: |
-  Aider les sapeurs-pompiers à intervenir plus efficacement avec des modèles prédictifs
+  Permettre aux sapeurs-pompiers de prévoir leurs interventions futures
 title: Previsecours
 width: is-12
 ---
@@ -29,7 +29,7 @@ width: is-12
           <a href="about" class="tile is-child notification is-danger">
             <p class="title">La problématique</p>
             <p class="contact">
-              Les sapeurs-pompiers sont confrontés à un volume d’intervention qui fluctue fortement. Cette volatilité du volume d’intervention rend difficile la gestion des ressources humaine et logistique. Sur le plan géographique, les lieux d’intervention sont également variables et inégalement répartis sur le territoire en fonction de la tranche horaire, du jour de la semaine, de la période de l’année, et d’autres variables diverses.
+              En 2016, les sapeurs-pompiers ont effectué plus de 4 500 000 interventions en France. Chacune d’entre elles suppose la mise en œuvre d’une véritable logistique humaine et matérielle. Celle-ci est d’autant plus complexe que le volume d’interventions est volatile, les lieux variables, les horaires fluctuants… 
             </p>
           </a>
         </div>
@@ -63,9 +63,7 @@ width: is-12
           <p class="content">
               Un modèle prédictif du volume d’interventions et de leur géolocalisation peut permettre d’anticiper les moyens opérationnels à mobiliser au sein des différentes casernes. Une meilleure gestion prévisionnelle des moyens est de nature à répondre aux demandes d’intervention plus rapidement en mobilisant un maximum de moyens uniquement lorsque cela est utile.
 
-              Si le résultat du défi est positif, le fait de travailler dans un département très peuplé mais étendu, comme l’Essonne, rend transposable à d’autres départements comparables la méthodologie mise au point.
-
-              Ce projet est réalisé en partenariat avec les sapeurs-pompiers de l’Essonne qui mettent à disposition leurs données portant sur l’ensemble des interventions des années précédentes.
+              Ce projet est réalisé en partenariat avec les sapeurs-pompiers de l’Essonne qui mettent à disposition leurs données et connaissances du terrain.
           </p>
         </div>
       </a>
