--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@ width: is-12
             <p class="contact">
               Les modèles prédictifs seront bientôt diponibles.
             </p>
+            
+            <p class="subtitle">Visualisation</p>
+            <p class="contact">
+              Les prédictions par communes, et par zone de couverture, sont diponibles via la lien <a href="https://viz.previsecours.fr/">"map"</a>.
+            </p>
+
           </a>
         </div>
       </div>
