--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@ width: is-12
           </a>
         </div>
         <div class="tile is-parent">
-          <a href="/assets/pdf/correlations.pdf" class="tile is-child notification is-warning" style="background-color: #FFB745">
+          <span class="tile is-child notification is-warning" style="background-color: #FFB745">
             <p class="title">Résultats</p>
             <p class="subtitle">Facteurs les plus corrélés</p>
             <p class="contact">
-              Les facteurs les plus corrélés avec les interventions des pompiers, sont diponibles en cliquant ici.
+              Les facteurs les plus corrélés avec les interventions des pompiers, <a href="/assets/pdf/correlations.pdf"> sont diponibles en cliquant ici </a> .
             </p>
             <figure class="image">
-              <img src="/assets/images/correlation.png" style="width:10em; opacity: 0.7;" alt="machine learning">
+              <img src="/assets/images/correlation.png" style="width:10em; opacity: 0.7;" alt="machine learning" href="/assets/pdf/correlations.pdf">
             </figure>
 
             <p class="subtitle">Modèles prédictifs</p>
