ajout de la documentation sur les moyennes

--- a/index.html
+++ b/index.html
@@ -77,23 +77,24 @@ width: is-12
         <div class="tile is-parent">
           <span class="tile is-child notification is-warning" style="background-color: #FFB745">
             <p class="title">Résultats</p>
-            <p class="subtitle">Facteurs les plus corrélés</p>
-            <p class="contact">
-              Les facteurs les plus corrélés avec les interventions des pompiers, <a href="/assets/pdf/correlations.pdf"> sont diponibles en cliquant ici </a> .
+            <p class="subtitle">Corrélations:
+              <span style="font-size:0.8em">Les facteurs les plus corrélés avec les interventions des pompiers, <a href="/assets/pdf/correlations.pdf" style="color:#3273dc;cursor: pointer;text-decoration: none;"> sont diponibles en cliquant ici </a>.
+              </span>
             </p>
             <figure class="image">
-              <img src="/assets/images/correlation.png" style="width:10em; opacity: 0.7;" alt="machine learning" href="/assets/pdf/correlations.pdf">
+              <a href="/assets/pdf/correlations.pdf">
+                <img src="/assets/images/correlation.png" style="width:10em; opacity: 0.7;" alt="machine learning">
+              </a>
             </figure>
 
-            <p class="subtitle">Modèles prédictifs</p>
-            <p class="contact">
-              Les modèles prédictifs seront bientôt diponibles.
-            </p>
-            
-            <p class="subtitle">Visualisation</p>
-            <p class="contact">
-              Les prédictions par communes, et par zone de couverture, sont diponibles via la lien <a href="https://viz.previsecours.fr/">"map"</a>.
-            </p>
+            <p class="subtitle">Modèles prédictifs: <span style="font-size:0.8em">Bientôt diponibles.</span> </p>
+
+            <p class="subtitle">Visualisation:<span style="font-size:0.8em"> Les prédictions par communes, et par zones de couverture, sont diponibles via la lien <a href="https://viz.previsecours.fr/" style="color:#3273dc;cursor: pointer;text-decoration: none;">"map"</a>.</span> </p>
+            <figure class="image">
+              <a href="https://viz.previsecours.fr/">
+                <img src="/assets/images/screenshot.png" style="width:10em; opacity: 0.9;" alt="visualisation">
+              </a>
+            </figure>
 
           </a>
         </div>
