--- a/documentation.html
+++ b/documentation.html
@@ -23,3 +23,20 @@ width: is-12
     </div>
   </div>
 </section>
+
+<section class="section">
+  <div class="tile is-ancestor">
+    <div class="tile is-vertical is-12">
+      <div class="tile">
+        <div class="tile is-parent  is-12 has-text-centered">
+          <span href="about" class="tile is-child notification is-light">
+            <p class="title">FAQ</p>
+            {% for post in site.categories.faq %}
+              <p class="subtitle"> <a href="{{site.baseurl}}{{post.url}}" style="color:#3273dc;cursor: pointer;text-decoration: none;"> {{post.title}} </a> </p>
+            {% endfor %}
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
