--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ width: is-12
             </figure>
             <p class="subtitle">Calculs de corrélation, et machine learning</p>
             <p class="contact">
-              Etablissement des corrélations entre interventions et facteurs externes, puis création des prédictions. Mise en place de l'interface de visualisation pour l'exploitation des résultats
+              Etablissement des corrélations entre <a href="https://www.data.gouv.fr/fr/datasets/interventions-des-pompiers/">interventions</a> et <a href="https://www.data.gouv.fr/fr/datasets/description-des-communes-de-lessonne-meteo-pollution-maladies-tranches-dages/">facteurs externes</a>, puis création des prédictions. Mise en place de l'interface de visualisation pour l'exploitation des résultats
             </p>
             <figure class="image">
               <img src="/assets/images/machine.png" style="width:5em; opacity: 0.7;" alt="machine learning">
