--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ width: is-12
       </div>
       <div class="tile">
         <div class="tile is-parent">
-          <a href="/previsecours-slides" class="tile is-child notification is-warning" style="background-color: #F5CA99">
+          <span class="tile is-child notification is-warning" style="background-color: #F5CA99">
             <p class="title">Méthodologie</p>
             <p class="subtitle">Rencontre des pompiers, et aquisition de données</p>
             <p class="contact">
@@ -72,7 +72,7 @@ width: is-12
             <figure class="image">
               <img src="/assets/images/machine.png" style="width:5em; opacity: 0.7;" alt="machine learning">
             </figure>
-          </a>
+          </span>
         </div>
         <div class="tile is-parent">
           <span class="tile is-child notification is-warning" style="background-color: #FFB745">
