--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 description: |
-  Permettre aux sapeurs-pompiers de prévoir leurs interventions futures <iframe width="420" height="315" src="https://youtu.be/frSoKvMISjQ" frameborder="0" allowfullscreen></iframe>
+  Permettre aux sapeurs-pompiers de prévoir leurs interventions futures
 title: Previsecours
+video: https://youtu.be/frSoKvMISjQ
 width: is-12
 ---
 <section class="section">
