--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 description: |
   Permettre aux sapeurs-pompiers de prévoir leurs interventions futures
 title: Previsecours
-video: https://youtu.be/frSoKvMISjQ
+video: https://youtube.com/embed/frSoKvMISjQ
 width: is-12
 ---
 <section class="section">
