Use presentation video from dailymotion etalab

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 description: |
   Permettre aux sapeurs-pompiers de prévoir leurs interventions futures
 title: Previsecours
-video: https://youtube.com/embed/frSoKvMISjQ
+video: https://www.dailymotion.com/embed/video/x7okqx2
 width: is-12
 ---
 <section class="section">
